Config NestJS and build login

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 node_modules 
-packages/admin-ui/node_modules
-packages/api/node_modules
-packages/ui/node_modules
-packages/admin-ui/dist
-packages/api/dist
-packages/ui/dist
-packages/admin-ui/test
-packages/api/test
-packages/ui/test
+admin-ui/node_modules
+api/node_modules
+ui/node_modules
+admin-ui/dist
+api/dist
+ui/dist
+admin-ui/test
+api/test
+ui/test
+admin-ui/.env
+api/.env
+ui/.env
 dist 
 test
 .env 
