--- a/api/package.json
+++ b/api/package.json
@@ -30,8 +30,12 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "firebase-admin": "^13.2.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.0",
     "reflect-metadata": "^0.2.0",
@@ -45,6 +49,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
