--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.0.6",
     "@nestjs/typeorm": "^11.0.0",
+    "@supabase/supabase-js": "^2.49.1",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -64,6 +65,7 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "base64-arraybuffer": "^1.0.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
