--- a/api/package.json
+++ b/api/package.json
@@ -31,7 +31,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.0.6",
-    "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/typeorm": "10.0.2",
     "@supabase/supabase-js": "^2.49.1",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
