--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "concurrently": "^9.1.2",
+    "moment": "^2.30.1",
     "path": "^0.12.7",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "6"
