--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@reduxjs/toolkit": "^2.6.1",
     "concurrently": "^9.1.2",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "6"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "6",
+    "redux-persist": "^6.0.0"
   }
 }
