--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^10.0.0",
@@ -35,6 +36,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.44.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
