--- a/api/package.json
+++ b/api/package.json
@@ -24,8 +24,10 @@
     "migration:revert": "yarn ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./src/config/database.migration.config.ts"
   },
   "dependencies": {
+    "@keyv/redis": "^4.3.2",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/bullmq": "^11.0.2",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^10.0.0",
@@ -37,6 +39,7 @@
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.44.3",
+    "cache-manager": "^6.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -44,6 +47,7 @@
     "firebase-admin": "^13.2.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.0.0",
+    "keyv": "^5.3.2",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.10.2",
     "nodemailer": "^6.10.0",
