--- a/api/package.json
+++ b/api/package.json
@@ -54,6 +54,7 @@
     "pg": "^8.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.21",
     "uuid": "11.1.0",
