--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,9 @@
     "migration:revert": "yarn ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./src/config/database.migration.config.ts"
   },
   "dependencies": {
+    "@bull-board/api": "^6.7.10",
+    "@bull-board/express": "^6.7.10",
+    "@bull-board/nestjs": "^6.7.10",
     "@keyv/redis": "^4.3.2",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/bullmq": "^11.0.2",
