--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.69.0",
     "concurrently": "^9.1.2",
     "moment": "^2.30.1",
     "path": "^0.12.7",
