--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "6",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0"
   }
 }
